<resources>
    <string name="app_name">Shows-Les-Dominik</string>
    <string name="app_logo">Shows</string>
    <string name="login_title">Login</string>
    <string name="login_message">In order to continue please log in.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="shows_title">Shows</string>
    <string name="review_button">Write a review</string>
    <string name="show_reviews">Reviews</string>
    <string name="show_no_reviews">No reviews yet.</string>
    <string name="dialog_title">Write a review</string>
    <string name="review_comment">Comment</string>
    <string name="submit_button">Submit</string>
    <string name="show_details_title">The Office</string>
    <string name="no_shows_text">Your shows are not showing. Get it?</string>
    <string name="remember_me_checkbox">Remember me</string>
    <string name="logout_button">Logout</string>
    <string name="change_photo">Change profile photo</string>
    <string name="register_button">Register</string>
    <string name="register_title">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register_text_button">Register</string>
    <string name="registration_failed">Registration failed. Please try again</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="login_failed">Login failed. Please register or try again</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_length_message">Minimum password length is 6 characters</string>
    <string name="passwords_not_matching">Passwords don\'t match</string>
    <string name="no_internet">No Internet connection</string>
    <string name="reviewDetails">%1$s reviews, %2$s average</string>
    <string name="logout_alert_dialog_message">Do you really want to log out?</string>
</resources>