<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.shows_lesdominik.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_purple"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="-12dp"
            android:src="@drawable/ic_top_left_illustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_top_right_illustration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loadingLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            app:trackCornerRadius="8dp"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/loginGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="logoImage, logoText, title, message, emailTextField, passwordTextField, rememberMeCheckBox, loginButton, registerTextButton"/>

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="184dp"
            android:layout_marginStart="56dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_triangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/logoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="184dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/app_logo"
            android:textColor="@color/white"
            android:textSize="34dp"
            app:layout_constraintStart_toEndOf="@id/logoImage"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="34dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImage"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login_message"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdiText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/remember_me_checkbox"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:textSize="17sp"
            android:minHeight="0dp"
            android:buttonTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTextField"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:backgroundTint="@color/button_background_color"
            android:enabled="false"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textSize="17sp"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toTopOf="@id/registerTextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rememberMeCheckBox"
            app:layout_constraintVertical_bias="1.0"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerTextButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/register_text_button"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto_bold"
            android:textSize="17sp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>