<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/showDetailsToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:title="@string/show_details_title"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:navigationIconTint="?attr/colorControlNormal"
        app:titleTextAppearance="@style/toolbarTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loadingShowDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/button_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackCornerRadius="8dp"/>

    <ScrollView
        android:id="@+id/showDetailsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/reviewButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showDetailsToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/showDetailsGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="detailsImage, showDetails, showReviewsTitle"/>

            <com.google.android.material.imageview.ShapeableImageView
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize12dp"
                android:id="@+id/detailsImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="24dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/the_office"/>

            <TextView
                android:id="@+id/showDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_regular"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailsImage"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"/>

            <TextView
                android:id="@+id/showReviewsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/show_reviews"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showDetails"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/reviewsGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="reviewDetails, reviewRatingBar, reviewRecycle"/>

            <TextView
                android:id="@+id/reviewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text=""
                android:textAllCaps="true"
                android:textColor="@color/light_grey"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showReviewsTitle"/>

            <RatingBar
                android:id="@+id/reviewRatingBar"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:progressTint="@color/button_purple"
                android:secondaryProgressTint="@color/button_purple"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviewDetails"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewRecycle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="320dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviewRatingBar"
                tools:listitem="@layout/item_review"/>

            <TextView
                android:id="@+id/noReviewsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/show_no_reviews"
                android:textSize="17sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showReviewsTitle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reviewButton"
        style="@style/Widget.MaterialComponents.Button.Purple"
        android:layout_width="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:text="@string/review_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showDetailsView"/>

</androidx.constraintlayout.widget.ConstraintLayout>